[package]
name = "yarg"
description = "Yet Another Rouglike Game. Based on H. Wolverson roguelike tutorial."
authors = ["Michał Łoński <michal@lonski.pl>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.7", features = ["serde"] }
specs = { version = "0.17", features = ["serde"] }
specs-derive = "0.4.1"
serde = { version = "^1.0.44", features = ["derive"] }
serde_json = "^1.0.44"
